# VoxelBlackHole

./: CMakeLists.txt  README.md
src/: Includes.h  main.cpp
src/GLFW/: glfw3.h
src/Program/: Program.h
src/Transformations/: Transformations.h
src/assets/: compute.glsl  fragment.glsl  shrink.py  vertex.glsl
src/glad/: glad.c  glad.h
src/shader/: shader.cpp  shader.h
